--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Net::SSH::Perl
 
+1.34.1 2012.11.20
+
+    - rt#76482 - apply patch to t/03-packet.t for 5.15+ (chisel++)
+
 1.34 2009.02.01
 
     - Rekey properly after 1 GB of data (rt.cpan.org #25044). Patch by Peter Oliver.
