--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Net::SSH::Perl
 
+1.36 2013.08.09
+
+  Apply many bugfixes from RT discussions.
+
+    - RT #48338 - FIX race condition with SSHv2
+    - RT #55195 - FIX race condition in KEXINIT
+    - RT #67586 - FIX test '03-packet.t' hangs forever
+    - RT #64517 - enable PTY support in SSH2
+    - RT #23947 - Replacement for KeyboardInt.pm
+
 1.35 2012.12.03
 
     - rt#76482 - apply patch to t/03-packet.t for 5.15+ (chisel++)
