Add Group 14 Diffie-Hellman Key Exchange Add Group Exchange (RFC4523) Diffie-Hellman Key Exchange (preferred DH method for security) Default DH KEX order is now DHGEX256, DH14, DH1 Requires Digest::SHA2

--- a/README
+++ b/README
@@ -20,6 +20,7 @@ Protocol 2
     * MIME::Base64
     * Digest::MD5
     * Digest::SHA1
+    * Digest::SHA2
     * Digest::HMAC_MD5
     * Digest::HMAC_SHA1
     * Convert::PEM (0.05 or greater)
