--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision history for Net::SSH::Perl
 
+2.00 2015.05.04
+
+    - Add AES Cipher support in CTR mode for better security
+    - Add Group 14 Diffie-Hellman Key Exchange
+    - Add Group Exchange (RFC4523) Diffie-Hellman Key Exchange
+      (preferred DH method for security)
+    - Default ciphers order is now aes,3des,blowfish,arcfour
+    - Default DH KEX order is now DHGEX256, DH14, DH1
+    - SSH Keys can now be in DOS format (no need to remove CR/LF)
+    - SOCKS proxy support via sub class Net::SSH:Perl::Proxy
+
 1.38 2014.10.06
 
     - RT #99284 - install valid SIGNATURE file
