--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Net::SSH::Perl
 
-2.00 2015.05.10
+2.00 2015.05.11
 
     - Add AES Cipher support in CTR mode for better security
     - Add Group 14 Diffie-Hellman Key Exchange
@@ -8,10 +8,14 @@ Revision history for Net::SSH::Perl
     - Add Curve25519 (curve25519-sha256@libssh.org) Key Exchange support
       (Requires Crypt::Curve25519)
     - Add hmac-sha2-256,hmac-sha2-512 MAC support
+    - Add hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com
+      Encrypt-then-MAC (ETM) MAC support
+    - Use BSD::arc4random for encrypted packet padding
     - Add support for Ed25519 ssh/host keys (Requires Crypt::Ed25519)
     - Default ciphers order is now aes,3des,blowfish,arcfour
     - Default KEX order is now Curve25519, DHGEXSHA256, DH14, DH1
-    - Default MAC order is now sha2-512, sha2-256, sha1, md5
+    - Default MAC order is now hmac-sha2-512-etm@openssh.com,
+      hmac-sha2-256-etm@openssh.com, sha2-512, sha2-256, sha1, md5
     - SSH Keys can now be in DOS format (no need to remove CR/LF)
     - SOCKS proxy support via sub class Net::SSH:Perl::Proxy
     - Now does not abort due to OpenSSH 6.8+ server
