--- a/README
+++ b/README
@@ -14,13 +14,17 @@ Protocol 1
 
 Protocol 2
 
+    * BSD::arc4random (1.50 or greater)
     * Crypt::DSA (0.03 or greater)
     * Crypt::DH (0.01 or greater)
+    * Crypt::Curve25519 (0.04 or greater)
+    * Crypt::Ed25519
+    * Crypt::OpenSSL::AES
     * Math::Pari (2.001804 or greater)
     * MIME::Base64
     * Digest::MD5
     * Digest::SHA1
-    * Digest::SHA2
+    * Digest::SHA2 (1.1.1 or greater)
     * Digest::HMAC_MD5
     * Digest::HMAC_SHA1
     * Convert::PEM (0.05 or greater)
