--- a/README
+++ b/README
@@ -39,6 +39,14 @@ git clone https://github.com/lkinley/Crypt-OpenSSH-ChachaPoly.git
 If the module is not installed, Net::SSH::Perl will fall back on
 other ciphers.
 
+The module Crypt::OpenBSD::Blowfish is required for encrypted
+Ed25519 key support.  It can be acquired from Git Hub at:
+https://github.com/lkinley/Crypt-OpenBSD-Blowfish
+or using git:
+git clone https://github.com/lkinley/Crypt-OpenBSD-Blowfish.git
+If the module is not installed, only unencrypted Ed25519 keys
+can be used.
+
 It also optionally requires Digest::BubbleBabble for
 generating bubble babble fingerprints, and Crypt::RSA
 (1.37 or greater) if you want to use RSA key files in SSH2.
