Add diffie-hellman-group-exchange-sha1 Kex support (RHEL5/OpenSSH 4.3 does not support diffie-hellman-group-exchange-sha256) Change wanted bits from 2048 to 4096 in DH Group Exchange to match OpenSSH Replace Digest::SHA1, Digest::SHA2, and Digest::HMAC_SHA1 with Digest::SHA

--- a/README
+++ b/README
@@ -23,10 +23,8 @@ Protocol 2
     * Math::Pari (2.001804 or greater)
     * MIME::Base64
     * Digest::MD5
-    * Digest::SHA1
-    * Digest::SHA2 (1.1.1 or greater)
+    * Digest::SHA
     * Digest::HMAC_MD5
-    * Digest::HMAC_SHA1
     * Convert::PEM (0.05 or greater)
     * IO::Socket
 
