--- a/Changes
+++ b/Changes
@@ -1,8 +1,14 @@
 Revision history for Net::SSH::Perl
 
-1.39 [NEXT]
+1.39 2015.09.12
 
     - RT #83978 - fix shell terminal width and height (lharey)
+    - RT #94574 - fix Algorithm negotiation issue in ::Kex.pm
+      (Brian Curnow, Michael Gray)
+    - code modernization (strict+warnings) (gh0stwizard)
+    - pass tests on Win32 (gh0stwizard)
+    - use File::HomeDir to simplify handling (Michael Gray)
+    - use Win32::LoginName on Windows (Michael Gray)
 
 1.38 2014.10.06
 
