--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Net::SSH::Perl
 
+1.40 2015.09.17
+    - declare new dependency to File::HomeDir in Makefile.PL
+
 1.39 2015.09.15
 
     - RT #83978 - fix shell terminal width and height (lharey)
