--- a/README
+++ b/README
@@ -83,3 +83,5 @@ hmac-sha2-256-etm@openssh.com, hmac-sha2-512-etm@openssh.com
   Encrypt-then-MAC (ETM) MAC support
 Ed25519 key support, including encrypted keys that are enciphered
   with supported crypto algorithms
+ECDSA Elliptical Curve DSA key support: ecdsa-sha2-nistp256,
+  ecdsa-sha2-nistp384, ecdsa-sha2-nistp521
