--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Net::SSH::Perl
 
+2.05 2016.10.03
+
+    - Add support for '+" syntax in Ciphers, KexAlgorithms, HostKeyAlgorithms
+      options as in OpenSSH
+
 2.04 2016.05.11
 
     - Add ECDSA key support
