--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Net::SSH::Perl
 
+2.10 2017.03.23
+    - Add curve25519-sha256 alias for curve25519-sha256@libssh.org key exchange
+    - Bugfix for when unsupported key types are encountered
+    - Add support for '-' syntax in options, including wildcards
+    - Add wildcard support for '+' syntax in options
+
 2.09 2016.10.26
     - Fix creation of keys in ecdsa, ed25519 key classes
     - Update eg/pssh-keygen to create ecdsa, ed25519 keys
