--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Net::SSH::Perl
 
+2.11 2017.04.16
+    - Packet bugfix: Introduced in 2.07, when ETM Mac is used, sometimes
+      not enough incoming bytes were available to fully read stored MAC
+    - DSA key bugfix: verify would fail if r/s had highest bit set
+
 2.10 2017.03.23
     - Add curve25519-sha256 alias for curve25519-sha256@libssh.org key exchange
     - Bugfix for when unsupported key types are encountered
